tests/vendor/valid/function_calls/arguments_in_registers/parameter_shadows_own_function.c
//expect 2
//tags: functions, shadow
int a(int a) {
    return a * 2;
}

int main(void) {
    return a(1);
}